Fix the text for the apps jumping while waiting for icons to load.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -63,6 +63,7 @@
 
 .thumbnail > img {
     margin-left: 46px;
+    height: 128px;
 }
 
 .thumbnail-mouse-down {
